--- a/doodle-jump/style.css
+++ b/doodle-jump/style.css
@@ -14,6 +14,12 @@ canvas {
   background: url(http://i.imgur.com/Y0BMP.png) top left;
 }
 
+.wrapper {
+  width: 440px;
+  float:left;
+  border: 1px solid black;
+}
+
 #scoreBoard {
   width: 420px;
   height: 50px;
