--- a/doodle-jump/style.css
+++ b/doodle-jump/style.css
@@ -83,6 +83,7 @@ h3 a {color: #5a5816}
   position: fixed;
   left: 50%;
   top: 5%;
+  z-index: -1;
 }
 
 .button.tweet {bottom: 100px; background-position: 0 -90px}
