--- a/doodle-jump/style.css
+++ b/doodle-jump/style.css
@@ -20,7 +20,7 @@ canvas {
   border: 1px solid black;
 }
 
-#stats {
+#gamestats {
   padding-left: 80px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -114,4 +114,44 @@ h3 a {color: #5a5816}
   -webkit-user-select: none;
   -ms-user-select: none;
   float: right;
+}
+
+/* Slider */
+
+.sliderContainer {
+  padding-top: 20px;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 40%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
 }
