implemented start/stop button

--- a/doodle-jump/style.css
+++ b/doodle-jump/style.css
@@ -77,7 +77,7 @@ h1 {
 h3 {text-align: right; margin: -10px 20px 0 0; color: #5e96be}
 h3 a {color: #5a5816}
 
-.button {
+#startButton {
   width: 105px;
   height: 31px;
   background: url(http://i.imgur.com/2WEhF.png) 0 0 no-repeat;
@@ -92,21 +92,18 @@ h3 a {color: #5a5816}
   z-index: -1;
 }
 
-.button.tweet {bottom: 100px; background-position: 0 -90px}
-.button.fb {bottom: 150px; background-position: 0 -60px}
-
-.info {position: absolute; right: 20px; bottom: 00px; margin: 0; color: green}
-
-.info .key {
-  width: 16px;
-  height: 16px;
-  background: url(http://i.imgur.com/2WEhF.png) no-repeat;
-  text-indent: -9999px;
-  display: inline-block;
+#stopButton {
+  width: 105px;
+  height: 31px;
+  background: url(http://i.imgur.com/2WEhF.png) 0 -31px no-repeat;
+  display: block;
+  color:  #000;
+  font-size: 12px;
+  line-height: 31px;
+  text-decoration: none;
+  position: absolute;
+  text-align: center;
 }
-
-.info .key.left {background-position: -92px -621px;}
-.info .key.right {background-position: -92px -641px;}
 
 #statsCanvas{
   width: 50%;
